# CE-CLCNN

./: .allennlp_plugins  .gitignore  CITATION.cff  README.md  pyproject.toml
ceclcnn/: __init__.py
ceclcnn/common/: util.py
ceclcnn/common/testing/: __init__.py  test_case.py
ceclcnn/data/dataset_readers/: __init__.py  wiki_title.py
ceclcnn/models/: __init__.py  base.py  ceclcnn.py  liu_acl17.py
ceclcnn/modules/: __init__.py  character_encoders.py  character_image_processor.py  random_erasing.py
ceclcnn/modules/seq2vec_encoders/: __init__.py  adaptive_cnn_encoder.py
ceclcnn/predictors/: __init__.py  wiki_title.py
config/CE-CLCNN/wiki_title/: base.jsonnet
config/CE-CLCNN/wiki_title/ja/: base.jsonnet  with_RE_and_WT.jsonnet
config/CE-CLCNN/wiki_title/ko/: base.jsonnet  with_WT.jsonnet
config/CE-CLCNN/wiki_title/zh_simplified/: base.jsonnet  with_RE.jsonnet
config/CE-CLCNN/wiki_title/zh_traditional/: base.jsonnet
config/liu-acl17/wiki_title/: base.jsonnet
config/liu-acl17/wiki_title/ja/: lookup.jsonnet  visual.jsonnet
config/liu-acl17/wiki_title/ko/: lookup.jsonnet  visual.jsonnet
config/liu-acl17/wiki_title/zh_simplified/: lookup.jsonnet  visual.jsonnet
config/liu-acl17/wiki_title/zh_traditional/: lookup.jsonnet  visual.jsonnet
notebooks/: analysis_of_character_embeddings.ipynb  apply_random_erasing_to_character_images.ipynb
scripts/run_exps/: run_ceclcnn.sh  run_liu_acl17.sh
test_fixtures/data/dataset_readers/: wiki_title_ja.jsonnet
tests/data/dataset_readers/: wiki_title_test.py
