[tool.poetry]
name = "ceclcnn"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
allennlp = "^2.8.0"
torchtyping = "^0.1.4"
kornia = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.910"
ipython = "^7.29.0"
poethepoet = "^0.11.0"
jupyterlab = "^3.2.4"
matplotlib = "^3.5.0"
tensorboard = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.0+cu111 torchvision==0.11.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html"
